Fix dropdown menu's z-index

--- a/scss/import/_header.scss
+++ b/scss/import/_header.scss
@@ -125,6 +125,7 @@
   &-dropdown {
     display: none;
     position: absolute;
+    z-index: 10;
     padding: 30px 30px 10px 30px;
     background-color: #282828;
     font-family: 'Centra', sans-serif;
